# iL2Cpp-X

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xuo/il2cppx/: DumpEngine.kt  Il2cppDumpAdapter.kt  MainActivity.kt  OfflineIl2CppDumperEngine.kt  ZygiskCompanionEngine.kt
app/src/main/java/com/xuo/il2cppx/engine/: BinaryReader.kt  DumpCsWriter.kt  DumpProgress.kt  ElfParser.kt  Il2CppNativeDumper.kt  JsonWriters.kt  MetadataModels.kt  MetadataParser.kt  NativeDumper.kt  RvaResolver.kt
app/src/main/java/com/xuo/il2cppx/settings/: DumpSettings.kt
app/src/main/java/com/xuo/il2cppx/ui/: SearchScreen.kt  SettingsScreen.kt
app/src/main/java/com/xuo/il2cppx/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
native/: .gitignore  Cargo.toml  README.md
native/src/: binary_reader.rs  dump_cs_writer.rs  elf_parser.rs  jni_bridge.rs  json_writers.rs  lib.rs  main.rs  metadata_models.rs  metadata_parser.rs  rva_resolver.rs
