[package]
name = "il2cpp_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "il2cpp_dump"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.12.0"

# Android JNI support
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
